@@ -1,3 +1,10 @@
+2004-01-17  Ross Burton  <ross@burtonini.com>
+
+	* src/cd-drive.c:
+	* src/cd-drive.h:
+	* src/transport.hxx:
+	Update from libbacon.
+
 2004-01-13  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-main.c:
